remove unnecessary component

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,4 +121,27 @@
   html {
     scroll-behavior: smooth;
   }
+  .gradient-text {
+    text-transform: uppercase;
+    font-size: 0.875rem; /* text-sm */
+    letter-spacing: normal;
+
+    background: linear-gradient(90deg, #ffffff, #41c4c6, #ffffff);
+    background-size: 200% 200%;
+
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+
+    animation: gradient-move 2s alternate-reverse infinite;
+  }
+
+  @keyframes gradient-move {
+    0% {
+      background-position: 100% 100%;
+    }
+    100% {
+      background-position: 0% 0%;
+    }
+  }
 }
